# Compactor

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: BuildOptions.cmake  CompileOptions.cmake  Dependencies.cmake
scripts/: install_dep.sh
src/: CMakeLists.txt  convert.cpp  convert.hpp  main.cpp  mam.cpp
src/utils/: Instrumentor.hpp
test/unit/: CMakeLists.txt  main.cpp
